--- a/Solution/LambdaSoftware.InHouse.SchemaTool/LambdaStudios.InHouse.SchemaTool.csproj
+++ b/Solution/LambdaSoftware.InHouse.SchemaTool/LambdaStudios.InHouse.SchemaTool.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{09CE15DD-7D56-4646-BB97-756C5E20CC8A}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{D7EBF50D-DB4D-47AD-8506-73CB815D6CAE}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LambdaStudios.InHouse.Persistence</RootNamespace>
-    <AssemblyName>LambdaStudios.InHouse.Persistence</AssemblyName>
+    <RootNamespace>LambdaSoftware.InHouse.SchemaTool</RootNamespace>
+    <AssemblyName>LambdaSoftware.InHouse.SchemaTool</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -49,33 +51,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Address.cs" />
-    <Compile Include="Catalog.cs" />
-    <Compile Include="Entities\Advert.cs" />
-    <Compile Include="Entities\AdvertDetails.cs" />
-    <Compile Include="Entities\AdvertTemplate.cs" />
-    <Compile Include="Entities\AdvertType.cs" />
-    <Compile Include="Entities\Attachment.cs" />
-    <Compile Include="Entities\Company.cs" />
-    <Compile Include="Entities\AppUser.cs" />
-    <Compile Include="Entities\Contact.cs" />
-    <Compile Include="Entities\AttachmentType.cs" />
-    <Compile Include="Entities\Interaction.cs" />
-    <Compile Include="Entities\InteractionType.cs" />
-    <Compile Include="Entities\Notification.cs" />
-    <Compile Include="Entities\NotificationType.cs" />
-    <Compile Include="Entities\Role.cs" />
-    <Compile Include="Entities\State.cs" />
-    <Compile Include="Entities\Visitor.cs" />
-    <Compile Include="Entity.cs" />
-    <Compile Include="Mappings\InteractionMap.cs" />
-    <Compile Include="Mappings\InteractionTypeMap.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
-    <None Include="Settings.StyleCop" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
