--- a/Solution/LambdaSoftware.InHouse.SchemaTool/LambdaStudios.InHouse.SchemaTool.csproj
+++ b/Solution/LambdaSoftware.InHouse.SchemaTool/LambdaStudios.InHouse.SchemaTool.csproj
@@ -57,6 +57,22 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Settings.StyleCop" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LambdaStudios.InHouse.Persistence\LambdaStudios.InHouse.Persistence.csproj">
+      <Project>{09ce15dd-7d56-4646-bb97-756c5e20cc8a}</Project>
+      <Name>LambdaStudios.InHouse.Persistence</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="SqlCommands\00-delete-all-fkeys.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlCommands\01-delete-all-tables.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
